--- a/index.html
+++ b/index.html
@@ -1,9 +1,29 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="id">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Website Maker - Your All-in-One Mobile Solution</title>
+    <title>Website Maker - Buat Website Impian Anda dalam Hitungan Menit</title>
+    <meta name="description" content="Website Maker adalah aplikasi mobile revolusioner yang memungkinkan Anda membuat website profesional tanpa keahlian coding. Ciptakan website impian Anda dalam hitungan menit!">
+    <meta name="keywords" content="website maker, pembuat website, aplikasi mobile, desain web, tanpa coding">
+    <meta name="author" content="BahasKoding">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://websitemaker.com/">
+    <meta property="og:title" content="Website Maker - Buat Website Impian Anda dalam Hitungan Menit">
+    <meta property="og:description" content="Ciptakan website profesional tanpa keahlian coding menggunakan aplikasi mobile Website Maker. Mudah, cepat, dan hasil yang menakjubkan!">
+    <meta property="og:image" content="https://websitemaker.com/src/img/og-image.jpg">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://websitemaker.com/">
+    <meta property="twitter:title" content="Website Maker - Buat Website Impian Anda dalam Hitungan Menit">
+    <meta property="twitter:description" content="Ciptakan website profesional tanpa keahlian coding menggunakan aplikasi mobile Website Maker. Mudah, cepat, dan hasil yang menakjubkan!">
+    <meta property="twitter:image" content="https://websitemaker.com/src/img/twitter-image.jpg">
+
+    <link rel="canonical" href="https://websitemaker.com/">
+    <link rel="icon" href="src/img/favicon.ico" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
     <link rel="stylesheet" href="src/input.css">
